[package]
name = "rtun"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
comfy-table = "7.2.2"
directories = "6.0.0"
env_logger = "0.11.8"
inquire = "0.9.1"
log = "0.4.29"
russh = "0.55.0"
russh-keys = "0.49.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
